--- a/client/src/main/resources/il/cshaifasweng/OCSFMediatorExample/client/buildExam.fxml
+++ b/client/src/main/resources/il/cshaifasweng/OCSFMediatorExample/client/buildExam.fxml
@@ -32,7 +32,7 @@
             <Font name="System Bold" size="12.0" />
          </font>
       </Button>
-      <Label layoutX="24.0" layoutY="305.0" text="Points Left:">
+      <Label layoutX="24.0" layoutY="305.0" text="Points Left:" textFill="WHITE">
          <font>
             <Font name="System Bold Italic" size="12.0" />
          </font></Label>
