--- a/client/src/main/resources/il/cshaifasweng/OCSFMediatorExample/client/principalPage.fxml
+++ b/client/src/main/resources/il/cshaifasweng/OCSFMediatorExample/client/principalPage.fxml
@@ -11,7 +11,7 @@
    <children>
       <BorderPane fx:id="BorderPane" prefHeight="426.0" prefWidth="700.0">
          <left>
-            <VBox fx:id="Menu" prefHeight="200.0" prefWidth="100.0" spacing="15.0" visible="false" BorderPane.alignment="CENTER" style="-fx-border-color: white; -fx-border-width: 5px;">
+            <VBox fx:id="Menu" prefHeight="200.0" prefWidth="100.0" spacing="15.0" style="-fx-border-color: white; -fx-border-width: 5px;" BorderPane.alignment="CENTER">
                <children>
                   <Button fx:id="ApproveBtn" mnemonicParsing="false" onAction="#ApproveRequestsEvent" prefHeight="46.0" prefWidth="100.0" style="-fx-background-color: transparent;" text="Approve Requests" textAlignment="CENTER" textFill="WHITE" wrapText="true">
                      <font>
@@ -48,7 +48,7 @@
             <VBox fx:id="detailVBox" prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER" />
          </center>
       </BorderPane>
-      <Button fx:id="menuBtn" mnemonicParsing="false" onAction="#OpenMenu" style="-fx-background-color: transparent; -fx-border-color: white;" text="Menu" textFill="WHITE">
+      <Button fx:id="menuBtn" mnemonicParsing="false" onAction="#OpenMenu" style="-fx-background-color: transparent; -fx-border-color: white;" text="Menu" textFill="WHITE" visible="false">
          <font>
             <Font name="System Bold Italic" size="15.0" />
          </font>
