--- a/client/src/main/resources/il/cshaifasweng/OCSFMediatorExample/client/requestExtraTime.fxml
+++ b/client/src/main/resources/il/cshaifasweng/OCSFMediatorExample/client/requestExtraTime.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
@@ -10,8 +11,8 @@
    <children>
       <VBox layoutX="14.0" layoutY="28.0" prefHeight="201.0" prefWidth="290.0" spacing="7.0">
          <children>
+            <ComboBox fx:id="idCMB" prefHeight="25.0" prefWidth="167.0" promptText="Exam ID" style="-fx-font-family: 'Arial Black';" />
             <TextField fx:id="extraTimeTF" prefHeight="25.0" prefWidth="171.0" promptText="Extra time (minutes)" style="-fx-font-family: 'Arial Black';" />
-            <TextField fx:id="examIdTF" layoutX="10.0" layoutY="254.0" prefHeight="27.0" prefWidth="290.0" promptText="Exam ID" style="-fx-font-family: 'Arial Black';" />
             <TextField fx:id="explainTF" prefHeight="116.0" prefWidth="290.0" promptText="Explain why" style="-fx-font-family: 'Arial Black';" />
          </children>
       </VBox>
