--- a/client/src/main/resources/il/cshaifasweng/OCSFMediatorExample/client/login.fxml
+++ b/client/src/main/resources/il/cshaifasweng/OCSFMediatorExample/client/login.fxml
@@ -1,48 +1,55 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.effect.Blend?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="il.cshaifasweng.OCSFMediatorExample.client.Login">
+<AnchorPane prefHeight="420.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="il.cshaifasweng.OCSFMediatorExample.client.Login">
     <children>
-        <HBox fx:id="loginHbox" prefHeight="67.0" prefWidth="600.0" style="-fx-background-color: #8DA9C5;">
-            <children>
-                <Label fx:id="loginLbl" alignment="CENTER" contentDisplay="CENTER" text="Login" textFill="WHITE">
-                    <font>
-                        <Font name="System Bold" size="31.0" />
-                    </font>
-                    <HBox.margin>
-                        <Insets left="250.0" top="10.0" />
-                    </HBox.margin>
-                </Label>
-            </children>
-        </HBox>
-        <Label fx:id="usernameLbl" layoutX="103.0" layoutY="144.0" text="Username:">
-            <font>
-                <Font name="System Bold Italic" size="20.0" />
-            </font>
-        </Label>
-        <Label fx:id="passwordLbl" layoutX="103.0" layoutY="234.0" text="Password:">
-            <font>
-                <Font name="System Bold Italic" size="20.0" />
-            </font>
-        </Label>
-        <TextField fx:id="usernameTxt" layoutX="213.0" layoutY="137.0">
+        <ImageView fitHeight="520.0" fitWidth="700.0" pickOnBounds="true" preserveRatio="true">
+            <image>
+                <Image url="@../../../../images/wall.jpg" />
+            </image>
+        </ImageView>
+        <TextField fx:id="usernameTxt" layoutX="402.0" layoutY="129.0" prefHeight="43.0" prefWidth="249.0" style="-fx-font-family: 'Arial Black';">
             <font>
                 <Font size="20.0" />
             </font>
+            <effect>
+                <Blend mode="SCREEN" />
+            </effect>
         </TextField>
-        <Button fx:id="loginBtn" layoutX="472.0" layoutY="292.0" mnemonicParsing="false" onAction="#checkLogin" style="-fx-background-color: #70879d;" text="Login" textFill="WHITE">
+        <Button fx:id="loginBtn" layoutX="491.0" layoutY="233.0" mnemonicParsing="false" onAction="#checkLogin" style="-fx-background-color: #000000;" text="Login to your account" textFill="WHITE">
             <font>
                 <Font name="System Bold Italic" size="14.0" />
             </font>
         </Button>
-        <PasswordField fx:id="passwordTxt" layoutX="212.0" layoutY="227.0" prefHeight="43.0" prefWidth="249.0" />
+        <PasswordField fx:id="passwordTxt" layoutX="401.0" layoutY="177.0" prefHeight="43.0" prefWidth="249.0" style="-fx-font-family: 'Arial Black';">
+            <effect>
+                <Blend mode="SCREEN" />
+            </effect></PasswordField>
+        <Label layoutX="361.0" layoutY="92.0" text="Log in">
+            <font>
+                <Font name="System Bold Italic" size="20.0" />
+            </font>
+        </Label>
+        <TextField layoutX="367.0" layoutY="129.0" prefHeight="43.0" prefWidth="35.0" />
+        <ImageView fitHeight="43.0" fitWidth="51.0" layoutX="351.0" layoutY="129.0" pickOnBounds="true" preserveRatio="true">
+            <image>
+                <Image url="@../../../../images/username.png" />
+            </image>
+        </ImageView>
+        <TextField layoutX="367.0" layoutY="177.0" prefHeight="43.0" prefWidth="35.0" />
+        <ImageView fitHeight="43.0" fitWidth="58.0" layoutX="355.0" layoutY="177.0" pickOnBounds="true" preserveRatio="true">
+            <image>
+                <Image url="@../../../../images/password.png" />
+            </image>
+        </ImageView>
     </children>
 </AnchorPane>
