--- a/client/src/main/resources/il/cshaifasweng/OCSFMediatorExample/client/viewGradesPrincipal.fxml
+++ b/client/src/main/resources/il/cshaifasweng/OCSFMediatorExample/client/viewGradesPrincipal.fxml
@@ -1,44 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
 
-<AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="332.666666667" prefWidth="500.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="il.cshaifasweng.OCSFMediatorExample.client.ViewGradesPrincipal">
+<AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="352.66666666667" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="il.cshaifasweng.OCSFMediatorExample.client.ViewGradesPrincipal">
     <children>
-        <Label alignment="CENTER" prefHeight="26.0" prefWidth="500.0" style="-fx-background-color: #70879d;" text="View Grades" textFill="WHITE">
-            <font>
-                <Font name="System Bold" size="17.0" />
-            </font>
-        </Label>
-        <ComboBox fx:id="idCMB" layoutX="14.0" layoutY="42.0" onAction="#chooseExam" prefHeight="25.0" prefWidth="89.0" promptText="Exam ID" />
-        <Label layoutX="122.0" layoutY="44.0" text="Subject:">
-            <font>
-                <Font size="15.0" />
-            </font>
-        </Label>
-        <Label layoutX="281.0" layoutY="44.0" text="Course:">
-            <font>
-                <Font size="15.0" />
-            </font>
-        </Label>
-        <TextField fx:id="subjectTF" editable="false" layoutX="182.0" layoutY="42.0" prefHeight="25.0" prefWidth="83.0" />
-        <TextField fx:id="courseTF" editable="false" layoutX="340.0" layoutY="42.0" prefHeight="25.0" prefWidth="83.0" />
-        <TableView fx:id="tableView" layoutX="175.0" layoutY="93.0" prefHeight="214.0" prefWidth="149.0">
+        <ComboBox fx:id="idCMB" layoutX="14.0" layoutY="29.0" onAction="#chooseExam" prefHeight="25.0" prefWidth="127.0" promptText="Exam ID" style="-fx-font-family: 'Arial Black';" />
+        <TextField fx:id="subjectTF" editable="false" layoutX="169.0" layoutY="29.0" prefHeight="25.0" prefWidth="107.0" promptText="Subject" style="-fx-font-family: 'Arial Black';" />
+        <TextField fx:id="courseTF" editable="false" layoutX="309.0" layoutY="29.0" prefHeight="25.0" prefWidth="149.0" promptText="Course" style="-fx-font-family: 'Arial Black';" />
+        <TableView fx:id="tableView" layoutX="225.0" layoutY="97.0" prefHeight="214.0" prefWidth="161.0" style="-fx-font-family: 'Arial Black';">
             <columns>
-                <TableColumn fx:id="nameCol" editable="false" prefWidth="102.0" text="Student Name" />
+                <TableColumn fx:id="nameCol" editable="false" prefWidth="110.0" text="Student Name" />
                 <TableColumn fx:id="gradeCol" editable="false" prefWidth="48.666656494140625" text="Grade" />
             </columns>
         </TableView>
-      <Label layoutX="14.0" layoutY="85.0" text="Author:">
-         <font>
-            <Font size="15.0" />
-         </font>
-      </Label>
-      <TextField fx:id="authorTF" editable="false" layoutX="73.0" layoutY="83.0" prefHeight="25.0" prefWidth="83.0" />
     </children>
 </AnchorPane>
